Fix z-index of article content and footer

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -222,6 +222,8 @@ form#edit-person {
   }
 
   .article-content {
+    z-index: 999;
+
     &.affix {
       top: 100px;
 
